--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   dio_cookie_manager: ^1.0.0
   html: ^0.14.0+3
   dio: ^3.0.9
-
+  animations: ^1.1.1
+  floating_search_bar: ^0.3.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
