--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_html: ^1.0.0
   photo_view: ^0.9.2
   flutter_advanced_networkimage: ^0.7.0
+  flutter_widgets: ^0.1.12
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
