--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   photo_view: ^0.9.2
   flutter_advanced_networkimage: ^0.7.0
   flutter_widgets: ^0.1.12
+  uuid: ^2.2.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
