--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
     sdk: flutter
   provider: ^4.1.3
   shared_preferences: ^0.5.7+3
-  cached_network_image: ^2.2.0+1
+  # cached_network_image: ^2.2.0+1
   webview_flutter: ^0.3.22+1
   path_provider: ^1.6.11
   cookie_jar: ^1.0.1
@@ -35,7 +35,6 @@ dependencies:
   html: ^0.14.0+3
   dio: ^3.0.9
   animations: ^1.1.1
-  floating_search_bar: ^0.3.0
   url_launcher: ^5.4.11
   filesize: ^1.0.4
   flutter_html: ^1.0.0
